-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 17, 21, 25, 26
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8364776 | 25.0.2 | Markus Grönlund | P2 | Resolved | Fixed | b01 |
| JDK-8364943 | 25.0.1 | Markus Grönlund | P2 | Resolved | Fixed | b04 |
| JDK-8364646 | 25 | Markus Grönlund | P2 | Closed | Fixed | b35 |
| JDK-8364730 | 21.0.10-oracle | Daniel Skantz | P2 | Resolved | Fixed | b01 |
| JDK-8372626 | 21.0.10 | Johannes Bechberger | P2 | Resolved | Fixed | b05 |
| JDK-8365770 | 21.0.9-oracle | Daniel Skantz | P2 | Closed | Fixed | b06 |
| JDK-8364749 | 17.0.18-oracle | Daniel Skantz | P2 | Resolved | Fixed | b01 |
| JDK-8365769 | 17.0.17-oracle | Daniel Skantz | P2 | Closed | Fixed | b06 |
| JDK-8365247 | 17.0.16.0.2-oracle | Daniel Skantz | P2 | Closed | Fixed | b01 |
For applications with a high churn rate of threads starting and stopping, this can lead to a high number of duplicated jdk.types.ThreadGroup entries, taking up unnecessary space in the .jfr binary file. At an extreme, the constant pool section of the .jfr binary can begin to dominate the entire file, leading to back-to-back file rotations including intensive disk I/O.
A scavenging scheme for clearing dead TG entries and an "is_serialized" scheme should be implemented. Such an "is_serialized" scheme could easily be extended to also cover JavaThreads ("is_serialized(JavaThread) -> is_serialized(ThreadGroups)")
- backported by
-
JDK-8364730 ThreadGroup constant pool serialization is not normalized
-
- Resolved
-
-
JDK-8364749 ThreadGroup constant pool serialization is not normalized
-
- Resolved
-
-
JDK-8364776 ThreadGroup constant pool serialization is not normalized
-
- Resolved
-
-
JDK-8364943 ThreadGroup constant pool serialization is not normalized
-
- Resolved
-
-
JDK-8372626 ThreadGroup constant pool serialization is not normalized
-
- Resolved
-
-
JDK-8364646 ThreadGroup constant pool serialization is not normalized
-
- Closed
-
-
JDK-8365247 ThreadGroup constant pool serialization is not normalized
-
- Closed
-
-
JDK-8365769 ThreadGroup constant pool serialization is not normalized
-
- Closed
-
-
JDK-8365770 ThreadGroup constant pool serialization is not normalized
-
- Closed
-
- relates to
-
JDK-8226511 Implement JFR Event Streaming
-
- Resolved
-
-
JDK-8372445 JFR files are generated in /tmp filling up space despite configured limitations
-
- Closed
-
-
JDK-8369692 JFR: Don't record thread metadata in case jdk.ThreadStart is disabled
-
- Open
-
- links to
-
Commit(jdk25)
openjdk/jdk/1e2bf070
-
Commit(master)
openjdk/jdk21u-dev/59dc0339
-
Commit(master)
openjdk/jdk/3bc44979
-
Review(jdk25)
openjdk/jdk/26618
-
Review(master)
openjdk/jdk21u-dev/2373
-
Review(master)
openjdk/jdk21u/475
-
Review(master)
openjdk/jdk/26558