8364258: ThreadGroup constant pool serialization is not normalized

Reviewed-by: egahlin