src/hotspot/share/jfr/support/jfrThreadLocal.hpp
@@ -67,6 +67,7 @@ class JfrThreadLocal {
   volatile jint _entering_suspend_flag;
   mutable volatile int _critical_section;
   u2 _vthread_epoch;
+  mutable u2 _generation;
   bool _vthread_excluded;
   bool _jvm_thread_excluded;
   bool _vthread;
@@ -266,6 +267,12 @@ class JfrThreadLocal {
   bool is_dead() const {
     return _dead;
   }
+
+  // Serialization state.
+  bool should_write() const;
+
+  static int32_t make_non_reentrant(Thread* thread);
+  static void make_reentrant(Thread* thread, int32_t previous_nesting);
 
   bool is_excluded() const;
   bool is_included() const;
